<resources>
    <string name="app_name" translatable="false">Lanchonete Mobile</string>

    <!--Gerais-->
    <string name="Nome">Name</string>
    <string name="ID">ID</string>
    <string name="Descrição">Description</string>
    <string name="Telefone">Phone Number</string>
    <string name="botaoBuscarPorID">Search by ID</string>
    <string name="botaoEditar">Edit</string>
    <string name="botaoExcluir">Delete</string>
    <string name="botaoProcurar">Search</string>
    <string name="closeButton">Close</string>

    <!--String Cargo -->
    <string name="Salario">Payment</string>
    <string name="TituloTelaCargo">Role Management</string>

    <!--String Categoria -->
    <string name="TituloTelaCategoria">Category Management</string>

    <!--String Cliente & Fornecedor -->
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ</string>
    <string name="Logradouro">Street</string>
    <string name="Numero">Number</string>
    <string name="CEP">Postal Code</string>
    <string name="Complemento">Complement</string>
    <string name="TituloTelaCliente">Customer Management</string>
    <string name="TituloTelaFornecedor">Supply Management</string>

    <!--String Funcionario -->
    <string name="Email">Email</string>
    <string name="DataContrato">Admission Date</string>
    <string name="Cargo">Role</string>
    <string name="TituloTelaFuncionario">Worker Management</string>

    <!--String ItemPedido -->
    <string name="Produto">Product</string>
    <string name="Quantidade">Quantity</string>

    <!--String Pedido -->
    <string name="NumPedido">Order ID</string>
    <string name="ValorTotal">Total Value</string>
    <string name="ItensPedido">Order Items</string>
    <string name="Data">Date</string>
    <string name="Status">Status</string>
    <string name="Cliente">Customer</string>

    <!--String Produto -->
    <string name="QtdEstoque">Stock Quantity</string>
    <string name="ValorUnit">Unit Value</string>
    <string name="Categoria">Category</string>
    <string name="Fornecedor">Supplier</string>

    <!--String Main -> Tela -->
    <string name="TituloTelaMain">Choose one option below</string>
    <string name="CadastraFornecedor">Supplier Register</string>
    <string name="AtualizaFornecedor">Supplier Update</string>
    <string name="CadastraCargo">Role Register</string>
    <string name="AtualizaCargo">Role Update</string>
    <string name="CadastraCategoria">Category Register</string>
    <string name="AtualizaCategoria">Category Update</string>
    <string name="CadastraCliente">Customer Register</string>
    <string name="AtualizaCliente">Customer Update</string>
    <string name="CadastraFuncionario">Worker Register</string>
    <string name="AtualizaFuncionario">Worker Update</string>
    <string name="FazerPedido">Make an Order</string>
    <string name="CadastraProduto">Product Register</string>
    <string name="AtualizaProduto">Product Update</string>
    <string name="GerenciaPedido">Order Management</string>

    <!--String Tela Pedido    -->
    <string name="TituloTelaPedido">Order Management</string>
    <string name="AdicionarProduto">Add Product</string>
    <string name="RemoverProduto">Remove</string>
    <string name="SalvarPedido">Save Order</string>
    <string name="ordersLabel">Orders:</string>
    <string name="orderListLabel">Order #</string>
    <string name="orderListCustomerLabel">Customer: </string>
    <string name="orderListValue">$</string>

    <!-- Dialog Pedido -->
    <string name="dataPedidoLabel">Date: </string>
    <string name="produtosPedido">Products:</string>
    <string name="valorTotal">Total: $</string>

    <!-- Tela Gerenciar Pedido -->
    <string name="novoPedido">New Order</string>
    <string name="buscarPedido">Search Order</string>
    <string name="nomeCliente">Customer\'s Name</string>
    <string name="dataPedido">Date</string>
    <string name="botaoEditarPedido">Update Order</string>
    <!--Strings Status -->
    <string name="EmPreparo">Preparing</string>
    <string name="Entregando">Delivering</string>
    <string name="Finalizado">Finished</string>
    <string name="Cancelado">Canceled</string>
    <!-- List Itens Pedido -->
    <string name="quantidade">x</string>
    <string name="nomeItem"> - </string>

    <!-- Tela Gerenciar Produtos -->
    <string name="novoProduto">New Product</string>
    <string name="buscarProduto">Search Product</string>
    <string name="titleListaProdutos">Products:</string>
    <!-- Tela Form Produto -->
    <string name="hintNomeProduto">Product\'s name</string>
    <string name="hintQuantidadeProduto">Quantity</string>
    <string name="hintPrecoProduto">Price</string>
    <string name="hintCategoriaProduto">Category</string>
    <string name="hintFornecedorProduto">Supplier</string>
    <string name="botaoSalvarProduto">Add Product</string>
    <string name="botaoEditarProduto">Update Product</string>

    <!-- Tela Gerenciar Clientes -->
    <string name="novoCliente">New Customer</string>
    <string name="buscarCliente">Search Customer</string>
    <string name="titleListaClientes">Customers:</string>
    <!-- Tela Form Cliente -->
    <string name="hintNomeCliente">Customer\'s name</string>
    <string name="hintTelefoneCliente">Phone Number</string>
    <string name="hintCPFCliente">CPF</string>
    <string name="hintLogradouroCliente">Street</string>
    <string name="hintNumeroCliente">Number</string>
    <string name="hintCEPCliente">Postal Code</string>
    <string name="hintComplementoCliente">Complement</string>
    <string name="botaoSalvarCliente">Add Customer</string>
    <string name="botaoEditarCliente">Update Customer</string>

    <!-- Tela Gerenciar Fornecedores -->
    <string name="novoFornecedor">New Supplier</string>
    <string name="buscarFornecedor">Search Supplier</string>
    <string name="titleListaFornecedores">Suppliers:</string>
    <!-- Tela Form Fornecedor -->
    <string name="hintNomeFornecedor">Supplier\'s name</string>
    <string name="hintTelefoneFornecedor">Phone Number</string>
    <string name="hintCNPJFornecedor">CNPJ</string>
    <string name="hintLogradouroFornecedor">Street</string>
    <string name="hintNumeroFornecedor">Number</string>
    <string name="hintCEPFornecedor">Postal Code</string>
    <string name="hintComplementoFornecedor">Complement</string>
    <string name="botaoSalvarFornecedor">Add Supplier</string>
    <string name="botaoEditarFornecedor">Update Supplier</string>

    <!-- Tela Gerenciar Funcionarios -->
    <string name="novoFuncionario">New Worker</string>
    <string name="buscarFuncionario">Search Worker</string>
    <string name="titleListaFuncionarios">Workers:</string>
    <!-- Tela Form Funcionario -->
    <string name="hintNomeFuncionario">Worker\'s name</string>
    <string name="hintTelefoneFuncionario">Phone Number</string>
    <string name="hintDataFuncionario">Admission Date</string>
    <string name="hintEmailFuncionario">Email</string>
    <string name="botaoSalvarFuncionario">Add Worker</string>
    <string name="botaoEditarFuncionario">Update Worker</string>

    <!-- Tela Gerenciar Categorias -->
    <string name="novoCategoria">New Category</string>
    <string name="buscarCategoria">Search Category</string>
    <string name="titleListaCategorias">Categories:</string>
    <!-- Tela Form Categoria -->
    <string name="hintNomeCategoria">Category\'s name</string>
    <string name="hintDescricaoCategoria">Description</string>
    <string name="botaoSalvarCategoria">Add Category</string>
    <string name="botaoEditarCategoria">Update Category</string>

    <!-- Tela Gerenciar Cargos -->
    <string name="novoCargo">New Role</string>
    <string name="buscarCargo">Search Role</string>
    <string name="titleListaCargos">Roles:</string>
    <!-- Tela Form Cargo -->
    <string name="hintNomeCargo">Role\'s name</string>
    <string name="hintSalarioCargo">Salary</string>
    <string name="hintDescricaoCargo">Description</string>
    <string name="botaoSalvarCargo">Add Role</string>
    <string name="botaoEditarCargo">Update Role</string>

    <string name="TituloTelaProduto">Product Management</string>
    <string name="TituloTelaPedido2">Order</string>

    <string name="back">Back</string>
    <string name="welcome_text">Welcome!</string>

</resources>